# djinni-support-lib

./: .bazelrc  .gitignore  .tool-versions  AGENT.md  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Makefile  README.Python.md  README.md  get-generator-from-pr.py  get-generator.py  mkdocs-requirements.txt  mkdocs.yml  requirements.txt  zconf-new.sh  zconf-old.sh
.github/workflows/: build-bazel.yml  build.yml
cmake/: Djinni.cmake
djinni/: proxy_cache_impl.hpp
djinni/cpp/json/nlohmann/: json+extension.hpp
djinni/cppcli/: AutoPtr.hpp  Error.cpp  Error.hpp  Marshal.hpp  WrapperCache.cpp  WrapperCache.hpp
djinni/cwrapper/: thread_local.hpp  wrapper_marshal.cpp  wrapper_marshal.h  wrapper_marshal.hpp
djinni/jni/: Marshal.hpp  djinni_jni_main.hpp  djinni_support.cpp  djinni_support.hpp
djinni/objc/: DJIError.h  DJIError.mm
djinni/py/: README.md  pyproject.toml  setup.py
djinni/py/src/djinni/: exception.py  pycffi_marshal.py  support.py
docs/: developer-guide.md  install.md  python-support.md
examples/: CMakeLists.txt
examples/ts/: demo.ts  run-tests-selenium.py  run.sh
test/: cppcli_list.txt  jni_list.txt  objc_list.txt  wasm_list.txt
test-suite/: CMakeLists.txt  Djinni.cmake  rpath_hack.py
test-suite/djinni/: client_interface.djinni  multiple_inheritance.djinni  single_language_interfaces.djinni  test.djinni  user_token.djinni
test-suite/handwritten-src/cpp/: Duration-cs.hpp  Duration-wasm.hpp  TranslateDuration.cpp  cpp_exception_impl.cpp  cpp_exception_impl.hpp  flag_roundtrip.cpp  test_helpers.cpp
test-suite/handwritten-src/cs/: ClientInterfaceImpl.cs  ClientInterfaceTest.cs  CppExceptionTest.cs  DurationTest.cs  EnumTest.cs  MapRecordTest.cs  MockRecordTest.cs  NestedCollectionTest.cs  PrimitiveListTest.cs  PrimitivesTest.cs  RecordWithDerivingsTest.cs  SetRecordTest.cs  TokenTest.cs  WcharTest.cs
test-suite/handwritten-src/js/: ArrayTests.js  AsyncTest.js  ClientInterfaceTest.js  ConstantsTest.js  CppExceptionTest.js  DataTest.js  DurationTest.js  EnumTest.js  MapRecordTest.js  NestedCollectionTest.js  OutcomeTest.js  PrimitiveListTest.js  PrimitivesTest.js  SetRecordTest.js  TokenTest.js  WcharTest.js  run.sh  test.html  testutils.js
test-suite/handwritten-src/objc/tests/: DBFlagsTests.mm  DBMapRecordTests.mm
test-suite/handwritten-src/pycpp/: foo_containers_interface_impl.cpp  foo_containers_interface_impl.hpp  foo_enum_interface_impl.cpp  foo_enum_interface_impl.hpp  foo_receiver_impl.cpp  foo_receiver_impl.hpp  foo_static_impl.cpp  foo_static_impl.hpp
test-suite/handwritten-src/ts/: ArrayTest.ts  AsyncTest.ts  ClientInterfaceTest.ts  ConstantsTest.ts  CppExceptionTest.ts  DataTest.ts  DurationTest.ts  EnumTest.ts  MapRecordTest.ts  NestedCollectionTest.ts  OutcomeTest.ts  PrimitiveListTest.ts  PrimitivesTest.ts  ProtoTest.ts  SetRecordTest.ts  TokenTest.ts  WcharTest.ts  main.ts  run-tests-selenium.py  run.sh  test.html  testutils.ts  tsconfig.json
